--- a/src/sass/pages/_portfolio.scss
+++ b/src/sass/pages/_portfolio.scss
@@ -12,7 +12,7 @@
   &project {
     display: grid;
     grid-template-rows: auto auto auto auto auto auto;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto minmax(0,1fr);
     gap: 10px;
     margin: 30px 0;
     &__link {
@@ -67,17 +67,20 @@
   }
 }
 
-@include media-query-medium {
+@include media-query-extra-small {
   .portfolio- {
     &project {
       &__label {
-        padding-left: 50px;
+        padding-left: 0;
       }
       &__description {
-        padding-right: 50px;
+        padding-right: 0;
       }
       &__list {
-        padding-right: 35px;
+        padding-right: 0;
+      }
+      &__image {
+        width: 100%;
       }
     }
   }
@@ -97,6 +100,22 @@
       }
       &__image {
         width: 100%;
+      }
+    }
+  }
+}
+
+@include media-query-medium {
+  .portfolio- {
+    &project {
+      &__label {
+        padding-left: 100px;
+      }
+      &__description {
+        padding-right: 100px;
+      }
+      &__list {
+        padding-right: 35px;
       }
     }
   }
